force-app/main/default/objects/VOC__c/VOC__c.object-meta.xml
<CustomObject>
    <label>VOC</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VOC</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>