force-app/main/default/objects/VOC__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Usage Problem</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>