force-app/main/default/objects/VOC__c/fields/CloseComments__c.field-meta.xml
<CustomField>
    <fullName>CloseComments__c</fullName>
    <label>Close Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>