force-app/main/default/objects/VOC__c/fields/JobOwner__c.field-meta.xml
<CustomField>
    <fullName>JobOwner__c</fullName>
    <label>Job Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>IF</fullName>
            </value>
            <value>
                <fullName>LEGACY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>