force-app/main/default/objects/VOC__c/fields/PIReview__c.field-meta.xml
<CustomField>
    <fullName>PIReview__c</fullName>
    <label>PI Review</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>