force-app/main/default/objects/VOC__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
                <default>true</default>
                <label>Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>