force-app/main/default/objects/VOC__c/fields/VOC_Developer__c.field-meta.xml
<CustomField>
    <fullName>VOC_Developer__c</fullName>
    <label>VOC 처리 담당자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>