force-app/main/default/objects/VOC__c/recordTypes/Admin.recordType-meta.xml
<RecordType>
    <fullName>Admin</fullName>
    <active>true</active>
    <label>Admin</label>
</RecordType>