force-app/main/default/objects/VOC__c/recordTypes/Power_User.recordType-meta.xml
<RecordType>
    <fullName>Power_User</fullName>
    <active>true</active>
    <label>Power User</label>
</RecordType>