force-app/main/default/objects/VOC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VOC_Developer__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>RegistrationDate__c</columns>
    <columns>CloseDate__c</columns>
    <columns>Description__c</columns>
    <columns>CloseComments__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>