force-app/main/default/objects/VOC__c/listViews/My_VOCs.listView-meta.xml
<ListView>
    <fullName>My_VOCs</fullName>
    <columns>NAME</columns>
    <columns>VOC_Developer__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>RegistrationDate__c</columns>
    <columns>CloseDate__c</columns>
    <columns>Description__c</columns>
    <columns>CloseComments__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My VOCs</label>
</ListView>